crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_definition_reports_each_redefinition.txt
A = (x)
A = (y)
A = (z)
------------------ DIAGNOSTICS -------------------
error: `A` is already defined
 --> query.ptk:2:1
  |
1 | A = (x)
  | ------- first defined here
2 | A = (y)
  | ^^^^^^^

error: `A` is already defined
 --> query.ptk:3:1
  |
1 | A = (x)
  | ------- first defined here
2 | A = (y)
3 | A = (z)
  | ^^^^^^^
------------------ DEFINITIONS -------------------
A
